--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,4 +19,4 @@ jobs:
         echo ":github: Bearer ${{ secrets.GITHUB_TOKEN }}" > ~/.gem/credentials
         chmod 600 ~/.gem/credentials
         ./gradlew gem
-        find ./build/gems -name 'embulk-filter-expand_json-*.gem' -maxdepth 1 -print0 | xargs -0 gem push --key github --host 'https://rubygems.pkg.github.com/sasamuku'
+        find ./build/gems -name 'embulk-filter-expand_json-*.gem' -maxdepth 1 -print0 | xargs -0 gem push --key github --host 'https://rubygems.pkg.github.com/st-tech'
